assets/css/screen.css
/* ... */
.home-template .site-header:after {
    display: none;
}


/* Adjust some margins for smaller screens */
@media (max-width: 650px) {
    .post-feed {
        padding-top: 5vw;
    }
    .post-card {
        margin: 0 20px 5vw;
    }
}



/* 7. Single Post
/* ---------------------------------------------------------- */

.post-template .site-main,
.page-template .site-main {
    padding-bottom: 4vw;
    background: color(var(--d-background));
}

.post-full {
    position: relative;
    z-index: 50;
}
/* ^ Required to make .post-full-content:before/after z-index stacking work */

.post-full-header {
    margin: 0 auto;
    padding: 6vw 3vw 3vw;
    max-width: 1040px;
    text-align: center;
}
@media (max-width: 500px) {
    .post-full-header {
        padding: 14vw 3vw 10vw;
    }
}

.post-full-meta {
    display: flex;
    justify-content: center;
    align-items: center;
    color: var(--midgrey);
    font-size: 1.4rem;
    font-weight: 600;
    text-transform: uppercase;
}

.post-full-meta-date {
    color: var(--blue);
}

.post-full-title {
    margin: 0;
    color: #fff;
}

.date-divider {
    display: inline-block;
    margin: 0 6px 1px;
}

.post-full-image {
    margin: 0 -10vw -165px;
    height: 800px;
    background: var(--lightgrey) center center;
    background-size: cover;
    border-radius: 5px;
}

@media (max-width: 1170px) {
    .post-full-image {
        margin: 0 -4vw -100px;
        height: 600px;
        border-radius: 0;
    }
}

@media (max-width: 800px) {
    .post-full-image {
        height: 400px;
    }
}

.post-full-content {
    position: relative;
    margin: 0 auto;
    padding: 70px 100px 0;
    min-height: 230px;
    font-family: Georgia, serif;
    font-size: 2.2rem;
    line-height: 1.6em;
}

@media (max-width: 1170px) {
    .post-full-content {
        padding: 5vw 7vw 0;
    }
}
@media (max-width: 800px) {
    .post-full-content {
        font-size: 1.9rem;
    }
}

.post-full-content:before {
    content: "";
    position: absolute;
    top: 15px;
    left: -5px;
    z-index: -1;
    display: block;
    width: 20px;
    height: 200px;
    background: rgba(39,44,49,0.15);
    filter: blur(5px);
    transform: rotate(-5deg);
}

.post-full-content:after {
    content: "";
    position: absolute;
    top: 15px;
    right: -5px;
    z-index: -1;
    display: block;
    width: 20px;
    height: 200px;
    background: rgba(39,44,49,0.15);
    filter: blur(5px);
    transform: rotate(5deg);
}

.no-image .post-full-content {
    padding-top: 0;
}

.no-image .post-full-content:before,
.no-image .post-full-content:after {
    display: none;
}

.kg-card-markdown {
    display: flex;
    flex-direction: column;
    align-items: center;
    max-width: 920px;
}

.post-full-content h1,
.post-full-content h2,
.post-full-content h3,
.post-full-content h4,
.post-full-content h5,
.post-full-content h6,
.post-full-content p,
.post-full-content ul,
.post-full-content ol,
.post-full-content dl,
.post-full-content pre,
.post-full-content blockquote,
.post-full-comments,
.footnotes {
    min-width: 100%;
}

.post-full-content li {
    word-break: break-word;
}

.post-full-content li p {
    margin: 0;
}

.post-template .kg-card-markdown > p:first-child {
    font-size: 1.25em;
    line-height: 1.5em;
}

.post-full-content a {
    color: var(--d-text);
    box-shadow: var(--blue) 0 -1px 0 inset;
}

.post-full-content a:hover {
    color: var(--blue);
    text-decoration: none;
}

.post-full-content strong,
.post-full-content em {
    color: #fff;
}

.post-full-content small {
    display: inline-block;
    line-height: 1.6em;
}

.post-full-content li:first-child {
    margin-top: 0;
}

.post-full-content img,
.post-full-content video {
    display: block;
    margin: 1.5em auto;
    max-width: 1040px;
}
@media (max-width: 1040px) {
    .post-full-content img,
    .post-full-content video {
        width: 100%;
    }
}


/* Full bleed images (#full)
Super neat trick courtesy of @JoelDrapper

Usage (In Ghost edtior):

![img](/some/image.jpg#full)

*/
.post-full-content img[src$="#full"] {
    max-width: none;
    width: 100vw;
}


/* Image captions

Usage (In Ghost editor):

![img](/some/image.jpg)
<small>Your image caption</small>

*/
.post-full-content img + br + small {
    display: block;
    margin-top: -3em;
    margin-bottom: 1.5em;
}


.post-full-content iframe {
    margin: 0 auto;
}

.post-full-content blockquote {
    margin: 0 0 1.5em;
    padding: 0 1.5em;
    border-left: #3eb0ef 3px solid;
}

.post-full-content blockquote p {
    margin: 0 0 1em 0;
    color: inherit;
    font-size: inherit;
    line-height: inherit;
    font-style: italic;
}

.post-full-content blockquote p:last-child {
    margin-bottom: 0;
}

.post-full-content code {
    padding: 0 5px 2px;
    font-size: 0.8em;
    line-height: 1em;
    font-weight: 400!important;
    background: #272822;
    border-radius: 3px;
    border: color(var(--darkgrey) l(-10%)) 1px solid;
}

.post-full-content pre {
    overflow-x: auto;
    margin: 1.5em 0 3em;
    padding: 20px;
    max-width: 100%;
    border: color(var(--darkgrey) l(-10%)) 1px solid;
    color: #f8f8f2;
    font-size: 1.4rem;
    line-height: 1.5em;
    background: #272822;
    border-radius: 5px;
}

.post-full-content pre > code {
    border-color: transparent;
}

.post-full-content pre code {
    padding: 0;
    font-size: inherit;
    line-height: inherit;
    background: transparent;
}

.post-full-content pre code * {
    color: inherit;
}

/* Less ugly toolbar */
div.code-toolbar {
    font-family: monospace;
    min-width: 100%;
    max-width: 100%;
}

div.code-toolbar>.toolbar a:hover, div.code-toolbar>.toolbar button:hover, div.code-toolbar>.toolbar span:hover {
    background: #505050;
}

.post-full-content .fluid-width-video-wrapper {
    margin: 1.5em 0 3em;
}

.post-full-content hr {
    margin: 4vw 0;
}
/* ... */

